syntax = "proto3";
package fileservice;

import "google/protobuf/descriptor.proto";
import "gprotos/gproto.proto";

service FileAPI {
  rpc GetJson(GetJsonRequest) returns (GetJsonResponse) {
    option (gproto.endpoint_config) = {
        entitlement_operations: ["appointments:read"],
        handlers: [
          {name:"entitlements",  options: [{key:"1", value:"appointments:read"}]},
          {name:"file-backend",  options: [{key:"filename",value:"filename"}]}
        ],
    };
  }
}

message GetJsonRequest {
  string filename = 1;
}

message GetJsonResponse {
  repeated stats data = 1;
}

message stats {
    string Year = 1;
}